@@ -1,3 +1,11 @@
+Fri Jun 18 03:30:20 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/LocalityManager/Scheduler/Deployment_Event.inl:
+        * DAnCE/LocalityManager/Scheduler/Deployment_Event.cpp:
+        * DAnCE/LocalityManager/Scheduler/Plugin_Manager.cpp:
+
+          Fuzz.
+
 Fri Jun 18 03:25:00 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/LocalityManager/Scheduler/Deployment_Completion.h:
